--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -1,5 +1,5 @@
 <div class="p-2 limit-container">
-  <div class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
+  <div *ngIf="!fromFormulation" class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
     <h2>Componentes</h2>
     <div class="flex flex-row justify-between w-full">
       <span class="md:before:content-['|'] md:before:mx-4">{{components?.length || 0}} componentes</span>
@@ -23,5 +23,9 @@
     *ngFor="let phase of phases"
     [phase]="phase"
     [components]="filterByPhase(phase.id)"
+    (onSelectComponent)="selectComponents($event)"
+    [fromFormulation]="fromFormulation"
+    [percentage]="getPhasePercentage(phase.id)"
+    [selectedComponents]="selectedComponents"
   ></app-components-phase>
 </div>
