--- a/frontend/src/app/compositions/components/composition-item/composition-item.component.html
+++ b/frontend/src/app/compositions/components/composition-item/composition-item.component.html
@@ -1,1 +1,35 @@
-<p>composition-item works!</p>
+<div
+  *ngIf="!editionMode"
+  class="border-2 border-dashed border-secondary-100 rounded-lg p-2 min-w-[200px] m-1 cursor-pointer"
+  (click)="onSelecting()"
+  [ngClass]="{
+    'bg-secondary-500 text-white-500': selected,
+    'bg-white-700 hover:opacity-70': !selected,
+    'animate-pulse': editing
+  }"
+>
+  <div class="flex flex-row justify-between">
+    <h4>{{ composition.name }}</h4>
+    <div *ngIf="editing" class="flex flex-row gap-2">
+      <button class="text-danger" (click)="deleteComposition($event)"><fa-icon [icon]="faTrash"></fa-icon></button>
+    </div>
+  </div>
+  <div class="flex flex-col">
+    <div
+      class="flex justify-between gap-2"
+      *ngFor="let phasePercentage of composition?.phases_percentage"
+    >
+      <p>{{ phasePercentage.phaseName }}</p>
+      <div class="flex flex-row">
+        <p>{{ phasePercentage.percentage }}</p>
+        <p>%</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<app-composition-form
+  [composition]="composition"
+  *ngIf="editionMode"
+  (onEndEdition)="editionMode = false"
+></app-composition-form>
