--- a/frontend/src/app/components/components/component-item/component-item.component.html
+++ b/frontend/src/app/components/components/component-item/component-item.component.html
@@ -37,7 +37,10 @@
       >{{ property.name }}.&nbsp;</span
     >
   </div>
-  <div *ngIf="fromFormulation" class="flex flex-row gap-2 justify-center m-2 font-bold">
+  <div
+    *ngIf="fromFormulation || fromRecipeDetails"
+    class="flex flex-row gap-2 justify-center m-2 font-bold"
+  >
     <button
       type="button"
       class="group-hover:!text-white-500 outline-none"
