--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -1,5 +1,5 @@
 <div class="p-2 limit-container">
-  <div *ngIf="!fromFormulation" class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
+  <div *ngIf="!fromFormulation && !fromRecipeDetails" class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
     <h2>Componentes</h2>
     <div class="flex flex-row justify-between w-full">
       <span class="md:before:content-['|'] md:before:mx-4">{{components?.length || 0}} componentes</span>
@@ -24,6 +24,7 @@
     [phase]="phase"
     [components]="filterByPhase(phase.id)"
     [fromFormulation]="fromFormulation"
+    [fromRecipeDetails]="fromRecipeDetails"
     [percentage]="getPhasePercentage(phase.id)"
     [componentArrayControl]="componentArrayControl"
     [recipeComponents]="recipeComponents"
