--- a/frontend/src/app/components/components/components-phase/components-phase.component.html
+++ b/frontend/src/app/components/components/components-phase/components-phase.component.html
@@ -32,20 +32,23 @@
     </div>
   </div>
   <div class="flex-col" [ngClass]="{ hidden: !open, flex: open }">
-    <div *ngIf="phaseComponentsForm?.errors?.maxAddition" class="text-xs font-bold">
+    <div
+      *ngIf="phaseComponentsForm?.errors?.maxAddition && fromFormulation"
+      class="text-xs font-bold"
+    >
       El porcentage de los componentes no debe superar al total asignado en la
       composición
     </div>
-    <div class="flex-wrap">
+    <div class="flex-wrap flex">
       <ng-container *ngFor="let component of components">
-        <app-component-item
-          [component]="component"
-          *ngIf="component.phase_id === phase?.id"
-          [fromFormulation]="fromFormulation"
-          [fromRecipeDetails]="fromRecipeDetails"
-          (onPercentageChange)="onPercentageChange($event)"
-        ></app-component-item
-      ></ng-container>
+          <app-component-item
+            [component]="component"
+            [percentage]="getPercentageByComponentId(component.id)"
+            [fromFormulation]="fromFormulation"
+            [fromRecipeDetails]="fromRecipeDetails"
+            (onPercentageChange)="onPercentageChange($event)"
+          ></app-component-item>
+      </ng-container>
     </div>
   </div>
 </div>
