--- a/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
+++ b/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
@@ -25,7 +25,7 @@
     <span
       class="text-sm group-hover:!text-white-500 text-secondary-500"
       *ngFor="let property of properties"
-      >{{ property.name }}.&nbsp;</span
+      >{{ property?.name }}.&nbsp;</span
     >
   </div>
 </div>
