--- a/frontend/src/app/components/components/component-details/component-details.component.html
+++ b/frontend/src/app/components/components/component-details/component-details.component.html
@@ -45,7 +45,7 @@
         class="rounded-full border-2 px-4 border-secondary-500 text-secondary-500 h-[100%] text-white-500 bg-secondary-500"
         *ngFor="let property of properties"
       >
-        <span>{{ property.name }}</span>
+        <span>{{ property?.name }}</span>
       </div>
     </div>
   </div>
