--- a/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
@@ -23,12 +23,12 @@
 
   <div class="my-2">
     <h4 class="my-1">Propiedades</h4>
-    <div class="flex gap-1">
+    <div class="flex gap-1 flex-wrap">
       <div
         class="rounded-full border-2 px-4 border-secondary-500 text-secondary-500 h-[100%] text-white-500 bg-secondary-500"
         *ngFor="let property of properties"
       >
-        <span>{{ property.name }}</span>
+        <span>{{ property?.name }}</span>
       </div>
     </div>
   </div>
