--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -122,7 +122,7 @@
             <li
               class="m-1 border-2 border-primary-500 hover:bg-primary-500 hover:text-white-500 rounded-full px-3 cursor-pointer"
               *ngFor="let profile of profiles"
-              (click)="selectProfile(profile?.id)"
+              (click)="selectProfile(profile)"
               [ngClass]="{
                 'bg-primary-500 text-white-500 cursor-default':
                   profileSelected === profile.id,
