multiple fixes related to profiles and profile selectedion and ids build query

--- a/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
@@ -39,6 +39,7 @@
       [fromRecipeDetails]="true"
       [phasesPercentage]="composition.phases_percentage"
       [recipeComponents]="this.recipe.components"
+      [defaultQuery]="getDefaultQueryComponents()"
     ></app-components>
   </div>
 </div>
