--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
     <div class="flex items-center menu-buttons md:flex-row-reverse">
       <div>
         <button (click)="navigateTo('register')" class="mr-2 btn btn-primary">
-          Sign up
+          Registrarse
         </button>
       </div>
       <div class="hidden md:block">
