--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="flex flex-wrap">
     <div
-      class="group hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-white-900 max-w-[150px] p-4 m-2 relative group cursor-pointer"
+      class="flex flex-col justify-center hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-white-900 max-w-[150px] p-4 m-2 relative cursor-pointer"
       (click)="onCreate()"
     >
       <fa-icon
