--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -43,7 +43,7 @@
           ></fa-icon>
         </button>
         <ul
-          class="min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1 transform scale-100 transition duration-150 ease-in-out"
+          class="z-10 min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1 transform scale-100 transition duration-150 ease-in-out"
           aria-labelledby="dropdownMenu"
           [ngClass]="{ 'scale-100': isMenuOpen, 'scale-0': !isMenuOpen }"
         >
@@ -105,7 +105,7 @@
         ></fa-icon>
       </button>
       <ul
-        class="min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1 transform scale-100 transition duration-150 ease-in-out"
+        class="z-10 min-w-[100px] origin-top-right absolute right-0 rounded-md shadow-lg bg-white-500 ring-1 ring-secondary-500 ring-opacity-5 focus:outline-none m-2 py-1 transform scale-100 transition duration-150 ease-in-out"
         aria-labelledby="dropdownMenu"
         [ngClass]="{ 'scale-100': isMenuOpen, 'scale-0': !isMenuOpen }"
       >
