--- a/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,7 @@
 <div class="p-2 m-auto max-w-[900px]">
   <app-breadcrumb [breadcrumbHistory]="breadcrumbHistory"></app-breadcrumb>
   <div class="flex justify-between">
-    <h2>{{ recipe?.name }}</h2>
+    <h2 class="text-2xl">{{ recipe?.name }}</h2>
     <div class="flex gap-1">
       <button type="button" class="btn btn-secondary" (click)="edit()">
         <fa-icon [icon]="faPencil"></fa-icon>
