--- a/frontend/src/app/components/components/components-phase/components-phase.component.html
+++ b/frontend/src/app/components/components/components-phase/components-phase.component.html
@@ -4,7 +4,7 @@
 >
   <div
     class="px-2 flex justify-between hover:opacity-60 cursor-pointer"
-    (click)="open = !open"
+    (click)="onCollapsing()"
   >
     <h4
       class="tracking-widest uppercase font-semibold"
@@ -26,12 +26,17 @@
         >{{ percentage }}%</span
       >
       <fa-icon
-        [icon]="open ? faChevronUp : faChevronDown"
+        [icon]="faChevronUp"
         [ngStyle]="{ color: phase?.color }"
+        class="transition-transform duration-300"
+        [ngClass]="{ 'rotate-0': open, 'rotate-180': !open }"
       ></fa-icon>
     </div>
   </div>
-  <div class="flex-col" [ngClass]="{ hidden: !open, flex: open }">
+  <div
+    #bodyAccordion
+    class="flex flex-col overflow-hidden transition-height delay-50 duration-300"
+  >
     <div
       *ngIf="phaseComponentsForm?.errors?.maxAddition && fromFormulation"
       class="text-xs font-bold"
@@ -41,13 +46,13 @@
     </div>
     <div class="flex-wrap flex">
       <ng-container *ngFor="let component of components">
-          <app-component-item
-            [component]="component"
-            [percentage]="getPercentageByComponentId(component.id)"
-            [fromFormulation]="fromFormulation"
-            [fromRecipeDetails]="fromRecipeDetails"
-            (onPercentageChange)="onPercentageChange($event)"
-          ></app-component-item>
+        <app-component-item
+          [component]="component"
+          [percentage]="getPercentageByComponentId(component.id)"
+          [fromFormulation]="fromFormulation"
+          [fromRecipeDetails]="fromRecipeDetails"
+          (onPercentageChange)="onPercentageChange($event)"
+        ></app-component-item>
       </ng-container>
     </div>
   </div>
