--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -1,8 +1,13 @@
 <div class="p-2 limit-container">
-  <div *ngIf="!fromFormulation && !fromRecipeDetails" class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap">
+  <div
+    *ngIf="!fromFormulation && !fromRecipeDetails"
+    class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap"
+  >
     <h2>Componentes</h2>
     <div class="flex flex-row justify-between w-full">
-      <span class="md:before:content-['|'] md:before:mx-4">{{components?.length || 0}} componentes</span>
+      <span class="md:before:content-['|'] md:before:mx-4"
+        >{{ components?.length || 0 }} componentes</span
+      >
 
       <button type="button" (click)="createComponent()" class="btn btn-primary">
         <fa-icon [icon]="faPlus"></fa-icon>
@@ -17,16 +22,20 @@
       [(ngModel)]="searchTerm"
       (keyup)="search()"
     />
-
+    <div>
+      
+    </div>
   </div>
-  <app-components-phase
-    *ngFor="let phase of phases"
-    [phase]="phase"
-    [components]="filterByPhase(phase.id)"
-    [fromFormulation]="fromFormulation"
-    [fromRecipeDetails]="fromRecipeDetails"
-    [percentage]="getPhasePercentage(phase.id)"
-    [componentArrayControl]="componentArrayControl"
-    [recipeComponents]="recipeComponents"
-  ></app-components-phase>
+  <div class="accordion">
+    <app-components-phase
+      *ngFor="let phase of phases"
+      [phase]="phase"
+      [components]="filterByPhase(phase.id)"
+      [fromFormulation]="fromFormulation"
+      [fromRecipeDetails]="fromRecipeDetails"
+      [percentage]="getPhasePercentage(phase.id)"
+      [componentArrayControl]="componentArrayControl"
+      [recipeComponents]="recipeComponents"
+    ></app-components-phase>
+  </div>
 </div>
