input search style

--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -17,13 +17,13 @@
   <div class="flex flex-column">
     <input
       type="text"
-      class="border-2 border-secondary-100 rounded-full py-2 px-4 w-full my-2"
+      class="input-search"
       placeholder="Buscar componente"
       [(ngModel)]="searchTerm"
       (keyup)="search()"
     />
     <div>
-      
+
     </div>
   </div>
   <div class="accordion">
