--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -10,7 +10,7 @@
   <div class="flex flex-column">
     <input
       type="text"
-      class="border-2 border-secondary-100 rounded-full py-2 px-4 w-full my-2"
+      class="input-search"
       placeholder="Buscar receta"
       [(ngModel)]="searchTerm"
       (keyup)="search()"
