filter by properties, fix components list

--- a/frontend/src/app/auth/components/login/login.component.html
+++ b/frontend/src/app/auth/components/login/login.component.html
@@ -61,7 +61,7 @@
       <button
         type="submit"
         [disabled]="!loginForm.valid"
-        class="mr-2 btn btn-primary"
+        class="mr-2 btn btn-primary shadow-thick-secondary"
       >
         Login
       </button>
