--- a/frontend/src/app/auth/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/components/reset-password/reset-password.component.html
@@ -55,7 +55,7 @@
       <button
         type="submit"
         [disabled]="!resetPasswordForm.valid"
-        class="btn btn-primary"
+        class="btn btn-primary shadow-thick-secondary"
       >
         Cambiar contraseña
       </button>
