--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -13,7 +13,7 @@
     >
     <div class="flex items-center menu-buttons md:flex-row-reverse">
       <div>
-        <button (click)="navigateTo('register')" class="mr-2 btn btn-primary">
+        <button (click)="navigateTo('register')" class="mr-2 btn btn-primary  shadow-thick-secondary">
           Registrarse
         </button>
       </div>
