--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -22,7 +22,7 @@
       <button
         type="submit"
         [disabled]="!forgotPasswordForm.valid"
-        class="btn btn-primary"
+        class="btn btn-primary shadow-thick-secondary"
       >
         Enviar email
       </button>
