--- a/frontend/src/app/components/components/component-form/component-form.component.html
+++ b/frontend/src/app/components/components/component-form/component-form.component.html
@@ -91,7 +91,7 @@
     <div class="text-center">
       <button
         type="submit"
-        class="btn btn-secondary disabled:cursor-default disabled:bg-secondary-300"
+        class="btn btn-primary shadow-thick-secondary"
         [disabled]="!componentForm?.valid"
       >
         Guardar
