--- a/frontend/src/app/components/components/component-item/component-item.component.html
+++ b/frontend/src/app/components/components/component-item/component-item.component.html
@@ -1,88 +1,69 @@
 <div
-  #container
-  class="max-w-[150px] p-4 m-2 relative group cursor-pointer"
+  class="min-w-[150px] max-w-[150px] m-2 transform transition delay-10 duration-300 ease-in-out scale-0"
   (click)="onClick()"
+  [ngClass]="{ 'scale-100': properties }"
 >
-  <div
-    #borderTop
-    class="absolute top-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x"
-  ></div>
-  <div
-    #borderLeft
-    class="absolute top-0 left-0 w-[10px] h-full bg-top-left bg-[length:10px_3px] bg-repeat-y"
-  ></div>
-  <div
-    #borderRight
-    class="absolute top-0 right-0 w-[10px] h-full bg-top-left bg-[length:10px_3px] bg-repeat-y"
-  ></div>
-  <div
-    #borderBottom
-    class="absolute bottom-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x"
-  ></div>
-  <h4
-    [ngStyle]="{
-      color: percentage > 0 ? '#fff' : phase?.color
-    }"
-    class="font-medium group-hover:!text-white-500"
-  >
-    {{ component.name }}
-  </h4>
-  <div class="flex flex-wrap justify-end text-right">
-    <span
-      class="text-sm group-hover:!text-white-500"
-      *ngFor="let property of component?.properties"
+  <app-dashed-box [color]="phase?.color" [selected]="percentage > 0">
+    <h4
       [ngStyle]="{
         color: percentage > 0 ? '#fff' : phase?.color
       }"
-      >{{ property?.name }}.&nbsp;</span
+      class="font-medium group-hover:!text-white-500"
     >
-  </div>
-  <div
-    *ngIf="fromFormulation || fromRecipeDetails"
-    class="flex flex-row gap-2 justify-center m-2 font-bold"
-  >
-    <button
-      *ngIf="!fromRecipeDetails"
-      type="button"
-      class="group-hover:!text-white-500 outline-none"
-      [ngStyle]="{
-        color: percentage > 0 ? '#fff' : phase?.color
-      }"
-      (click)="decrement($event)"
+      {{ component?.name }}
+    </h4>
+    <app-properties-component
+      [properties]="properties"
+      [phase]="phase"
+      [selected]="percentage > 0"
+    ></app-properties-component>
+    <div
+      *ngIf="fromFormulation || fromRecipeDetails"
+      class="flex flex-row gap-2 justify-center font-bold"
     >
-      <fa-icon [icon]="faMinus"></fa-icon>
-    </button>
-    <div class="w-full">
-      <input
-        type="number"
-        min="0"
-        max="100"
-        [(ngModel)]="percentage"
-        (change)="onChangePercentage($event)"
+      <button
+        *ngIf="!fromRecipeDetails"
+        type="button"
+        class="group-hover:!text-white-500 outline-none"
         [ngStyle]="{
           color: percentage > 0 ? '#fff' : phase?.color
         }"
-        class="outline-none group-hover:!text-white-500 border-none bg-transparent w-[50%] text-right"
-      />
-      <span
-        [ngStyle]="{
-          color: percentage > 0 ? '#fff' : phase?.color
-        }"
-        class="h-[100%] group-hover:!text-white-500 w-[50%]"
+        (click)="decrement($event)"
       >
-        %
-      </span>
+        <fa-icon [icon]="faMinus"></fa-icon>
+      </button>
+      <div class="w-full">
+        <input
+          type="number"
+          min="0"
+          max="100"
+          [(ngModel)]="percentage"
+          (change)="onChangePercentage($event)"
+          [ngStyle]="{
+            color: percentage > 0 ? '#fff' : phase?.color
+          }"
+          class="outline-none group-hover:!text-white-500 border-none bg-transparent w-[50%] text-right"
+        />
+        <span
+          [ngStyle]="{
+            color: percentage > 0 ? '#fff' : phase?.color
+          }"
+          class="h-[100%] group-hover:!text-white-500 w-[50%]"
+        >
+          %
+        </span>
+      </div>
+      <button
+        *ngIf="!fromRecipeDetails"
+        type="button"
+        class="group-hover:!text-white-500 outline-none"
+        [ngStyle]="{
+          color: percentage > 0 ? '#fff' : phase?.color
+        }"
+        (click)="increment($event)"
+      >
+        <fa-icon [icon]="faPlus"></fa-icon>
+      </button>
     </div>
-    <button
-      *ngIf="!fromRecipeDetails"
-      type="button"
-      class="group-hover:!text-white-500 outline-none"
-      [ngStyle]="{
-        color: percentage > 0 ? '#fff' : phase?.color
-      }"
-      (click)="increment($event)"
-    >
-      <fa-icon [icon]="faPlus"></fa-icon>
-    </button>
-  </div>
+  </app-dashed-box>
 </div>
