--- a/frontend/src/app/components/components/components-phase/components-phase.component.html
+++ b/frontend/src/app/components/components/components-phase/components-phase.component.html
@@ -45,15 +45,16 @@
       composición
     </div>
     <div class="flex-wrap flex">
-      <ng-container *ngFor="let component of components">
-        <app-component-item
-          [component]="component"
-          [percentage]="getPercentageByComponentId(component.id)"
-          [fromFormulation]="fromFormulation"
-          [fromRecipeDetails]="fromRecipeDetails"
-          (onPercentageChange)="onPercentageChange($event)"
-        ></app-component-item>
-      </ng-container>
+      <app-component-item
+        *ngFor="let component of components"
+        [component]="component"
+        [percentage]="getPercentageByComponentId(component.id)"
+        [fromFormulation]="fromFormulation"
+        [fromRecipeDetails]="fromRecipeDetails"
+        (onPercentageChange)="onPercentageChange($event)"
+        [phase]="phase"
+        [properties]="getPropertiesByComponent(component.properties)"
+      ></app-component-item>
     </div>
   </div>
 </div>
