--- a/frontend/src/app/properties/components/properties-list/properties-list.component.html
+++ b/frontend/src/app/properties/components/properties-list/properties-list.component.html
@@ -1,14 +1,14 @@
 <div class="my-2 relative">
   <input
     type="text"
-    class="border-2 border-secondary-100 rounded-full py-2 px-4 w-full"
+    class="input-search"
     placeholder="Buscar propiedades"
     [(ngModel)]="searchTerm"
     (keyup)="search()"
   />
   <fa-icon
     [icon]="faSearch"
-    class="absolute right-0 px-4 fa-2x text-white-900"
+    class="absolute top-2 right-0 px-4 fa-2x text-white-900"
   ></fa-icon>
 </div>
 
