--- a/frontend/src/app/recipes/components/formulation/formulation.component.html
+++ b/frontend/src/app/recipes/components/formulation/formulation.component.html
@@ -66,7 +66,7 @@
     <div class="text-center">
       <button
         type="submit"
-        class="btn btn-secondary disabled:cursor-default disabled:bg-secondary-300"
+        class="btn btn-secondary disabled:cursor-default disabled:bg-secondary-300  shadow-thick-secondary"
         [disabled]="!formulationForm?.valid"
       >
         Guardar
