--- a/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/recipes/components/recipe-detail/recipe-detail.component.html
@@ -3,10 +3,18 @@
   <div class="flex justify-between">
     <h2 class="text-2xl">{{ recipe?.name }}</h2>
     <div class="flex gap-1">
-      <button type="button" class="btn btn-secondary" (click)="edit()">
+      <button
+        type="button"
+        class="btn btn-outline-secondary shadow-thick-secondary"
+        (click)="edit()"
+      >
         <fa-icon [icon]="faPencil"></fa-icon>
       </button>
-      <button type="button" class="btn btn-danger" (click)="remove()">
+      <button
+        type="button"
+        class="btn btn-outline-danger shadow-thick-secondary"
+        (click)="remove()"
+      >
         <fa-icon [icon]="faTrash"></fa-icon>
       </button>
     </div>
