--- a/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
+++ b/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
@@ -1,34 +1,20 @@
 <div
-  class="min-w-[150px] max-w-[280px] p-4 m-2 relative group cursor-pointer hover:bg-secondary-500 bg-transparent rounded transform transition delay-10 duration-300 ease-in-out scale-0"
+  class="min-w-[150px] max-w-[280px] m-2 transform transition delay-10 duration-300 ease-in-out scale-0"
   (click)="onClick()"
-  [ngClass]="{'scale-100': properties}"
+  [ngClass]="{ 'scale-100': properties }"
 >
-  <div
-    #borderTop
-    class="absolute top-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x rounded-[5rem]"
-  ></div>
-  <div
-    #borderLeft
-    class="absolute top-0 left-0 w-[10px] h-full bg-top-left bg-[length:10px_3px] bg-repeat-y rounded-[5rem]"
-  ></div>
-  <div
-    #borderRight
-    class="absolute top-0 right-0 w-[10px] h-full bg-top-left bg-[length:10px_3px] bg-repeat-y rounded-[5rem]"
-  ></div>
-  <div
-    #borderBottom
-    class="absolute bottom-0 right-0 w-full h-[10px] bg-[length:3px_10px] bg-repeat-x rounded-[5rem]"
-  ></div>
-  <h4
-    class="font-bold group-hover:!text-white-500 text-secondary-500 uppercase text-center text-lg"
-  >
-    {{ recipe.name }}
-  </h4>
-  <div class="flex flex-wrap justify-center text-center">
-    <span
-      class="text-sm group-hover:!text-white-500 text-secondary-500"
-      *ngFor="let property of properties"
-      >{{ property?.name }}.&nbsp;</span
+  <app-dashed-box>
+    <h4
+      class="font-bold group-hover:!text-white-500 text-secondary-500 uppercase text-center text-lg"
     >
-  </div>
+      {{ recipe.name }}
+    </h4>
+    <div class="flex flex-wrap justify-center text-center">
+      <span
+        class="text-sm group-hover:!text-white-500 text-secondary-500"
+        *ngFor="let property of properties"
+        >{{ property?.name }}.&nbsp;</span
+      >
+    </div>
+  </app-dashed-box>
 </div>
