--- a/frontend/src/app/shared/components/feedback/feedback.component.html
+++ b/frontend/src/app/shared/components/feedback/feedback.component.html
@@ -1,1 +1,3 @@
-<div class="text-white-500 p-0 -translate-y-full transition ease-in-out delay-10 duration-200" id="feedback"></div>
+<div class="text-white-500 p-0 -translate-y-full transition ease-in-out delay-10 duration-200" id="feedback">
+    <span id="feedback-msg"></span>
+</div>
