--- a/frontend/src/app/user/components/register/register.component.html
+++ b/frontend/src/app/user/components/register/register.component.html
@@ -95,7 +95,7 @@
       <button
         type="submit"
         [disabled]="!registerForm.valid"
-        class="btn btn-primary"
+        class="btn btn-primary  shadow-thick-secondary"
       >
         Registrarse
       </button>
