--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -48,16 +48,24 @@ a.router-link-active {
 }
 
 .btn-primary {
-  @apply bg-primary-400 text-white-500 border-primary-500 hover:bg-primary-500;
+  @apply bg-primary-400 text-white-500 border-primary-500 hover:bg-primary-500  disabled:cursor-default disabled:bg-primary-300;
 }
 .btn-secondary {
-  @apply bg-secondary-400 text-white-500 border-secondary-500 hover:bg-secondary-500;
+  @apply bg-secondary-400 text-white-500 border-secondary-500 hover:bg-secondary-500 disabled:cursor-default disabled:bg-secondary-300;
 }
 .btn-danger {
   @apply bg-danger text-white-500 border-danger hover:bg-danger;
 }
 .btn-white {
   @apply bg-white-400 text-secondary-500 border-white-500 hover:bg-white-500;
+}
+
+.btn-outline-secondary {
+  @apply text-secondary-500 border-2 border-secondary-500 hover:bg-secondary-500 hover:text-white-500 disabled:cursor-default disabled:bg-secondary-300;
+}
+
+.btn-outline-danger {
+  @apply text-danger border-2 border-danger hover:bg-danger hover:text-white-500 disabled:cursor-default disabled:bg-danger;
 }
 
 h2 {
@@ -126,4 +134,11 @@ input:-webkit-autofill:active {
 }
 .input-search {
   @apply border-2 border-secondary-500 rounded-xl py-2 px-4 w-full my-2 shadow-thick shadow-secondary-500 outline-none transform transition-all duration-100 active:shadow-none active:translate-y-[3px] active:translate-x-[3px];
+}
+
+.shadow-thick-secondary {
+  @apply shadow-thick shadow-secondary-500  transform transition-all duration-100 active:shadow-none active:translate-y-[3px] active:translate-x-[3px] disabled:shadow-none;
+}
+.shadow-thick-danger {
+  @apply shadow-thick shadow-danger transform transition-all duration-100 active:shadow-none active:translate-y-[3px] active:translate-x-[3px] disabled:shadow-none;
 }
